# rust_weather_app

./: .gitignore  Cargo.toml  README.md
src/: main.rs  weather.rs
