[package]
name = "simple_weather_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde_json = "1.0.90"
tokio = { version = "1.23.0", features = ["full"] }
chrono = "0.4.23"
lazy_static = "1.4.0"
